--- a/front/styles/styles.css
+++ b/front/styles/styles.css
@@ -370,3 +370,23 @@ footer ul {
   color: white;
   padding: 10px;
 }
+
+.imagens {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.imagens img {
+  height: 200px;
+  width: 200px;
+}
+
+.addAnuncio {
+  border: #000000;
+  border-width: 2px;
+  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
