--- a/front/styles/stylessidebar.css
+++ b/front/styles/stylessidebar.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: seagreen;
+  background: black;
 }
 
 .sidebar {
@@ -17,7 +17,7 @@ body {
   left: 0;
   width: 80px;
   height: 100%;
-  background: purple;
+  background: red;
   padding: 6px 14px;
   transition: 0.5s;
 }
