--- a/front/styles/stylescadastro.css
+++ b/front/styles/stylescadastro.css
@@ -4,13 +4,17 @@
   box-sizing: border-box;
 }
 
+input:focus,
+input:valid {
+  background-color: #ff0000;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #0a0808;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .container {
@@ -21,10 +25,11 @@ body {
   background-color: #000000;
   border-radius: 8px;
   overflow: hidden;
+  padding: 30px;
 }
 
 .left-section {
-  background-color: #f4ca6e;
+  background-color: #7d7d7c;
   width: 50%;
   display: flex;
   justify-content: center;
@@ -37,8 +42,13 @@ body {
 }
 
 .right-section {
-  padding: 30px;
+  padding-left: 30px;
   width: 50%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 h2 {
@@ -89,5 +99,5 @@ button {
 }
 
 button:hover {
-  background-color: #565555;
+  background-color: #b30000;
 }
